training batch files error fix

--- a/preprocess/preprocess.ipynb
+++ b/preprocess/preprocess.ipynb
@@ -1239,7 +1239,7 @@
     "EvalData=data.surv[eval.ind,]\n",
     "write.table(EvalData,file = paste0(savepath,'surv.eval.txt'),sep = '\\t', row.names = F, quote = F)\n",
     "write.table(TestData,file = paste0(savepath,'surv.test.txt'),sep = '\\t',row.names = F, quote = F)\n",
-    "write.table(TrainingData,file = paste0(savepath,'surv.train..txt'),sep = '\\t',row.names = F, quote = F)\n",
+    "write.table(TrainingData,file = paste0(savepath,'surv.train.txt'),sep = '\\t',row.names = F, quote = F)\n",
     "\n",
     "# geneset labels\n",
     "TrainingData=data.immune[tr.ind,]\n",
